fix clear button mobile

--- a/app/assets/stylesheets/pattern_table.scss
+++ b/app/assets/stylesheets/pattern_table.scss
@@ -199,7 +199,7 @@ a.not_pattern {
     }
 
     @include mobile {
-      float: none;
+      float: left;
       label {
         text-align: left;
       }
